# botronka-ThesisProject

./: .gitignore  ARCHITECTURE.md  README.md  audio_architechture.txt  boot.txt  boot_and_runtime.txt  main.py  pyproject.toml
botronka-ThesisReport/: notes_for_thesis.txt
config/: config.yaml
data/people/: face_db.json  trust_map.json
scripts/: botfriend.service  botfriend_boot.sh  install_boot_service.sh
src/: app.py
src/agent/: admin.py  llm_client.py  nlu.py  policy.py
src/audio/: STT.py  TTS.py  vad.py
src/core/: config.py  message.py  state.py
src/hardware/: buzzer.py  distanceSensor.py  oledDisplay.py
src/threads/: AgentWorker.py  STTworker.py  TTSworker.py  audioIO.py  baseThread.py  buzzer.py  display.py  motion.py  motionStub.py  threadManager.py  ultrasonic.py  vision.py
src/vision/: Vision_Cycle.txt  cli_face_test.py  face_enroll.py  face_service.py
tests/integration/: config.py
tests/integration/ui/: test_buzzer.py
tests/tools/: configure_eduroam.py
tests/unit/: hardware_selftest.py  test_agent_quick_path.py  test_motion.py  test_wake_mode.py  voice_roundtrip.py  wheels_test.py
tests/unit/camera/: detect_test.py  test_fov.py
tests/unit/ui/: test_buzzer.py
