[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "botronka"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pyyaml",
  "pillow",
  "gpiozero",
  "opencv-python",
  "adafruit-blinka",
  "adafruit-circuitpython-ssd1306"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "hardware: marks tests that require physical hardware (deselect with '-m not hardware')",
]
